[package]
name = "bogosort"
version = "0.1.0"
authors = ["Kyle Nickel <nickelkr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
handlebars = "3.5.5"
